force-app/main/default/objects/fboost__B_AsyncJobEvent__e/fboost__B_AsyncJobEvent__e.object-meta.xml
<CustomObject>
    <description>Async Job event is used to trigger Async Job specified in the parameters</description>
    <label>Boost Async Job Event</label>
    <pluralLabel>Boost Async Job Events</pluralLabel>
</CustomObject>