force-app/main/default/objects/fboost__B_AsyncJobEvent__e/fields/fboost__AddToQueueOnly__c.field-meta.xml
<CustomField>
    <fullName>fboost__AddToQueueOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if job need to run process after adding to queue</description>
    <label>Add To Queue Only</label>
    <type>Checkbox</type>
</CustomField>