force-app/main/default/objects/fboost__B_AsyncJobEvent__e/fields/fboost__Cancellation__c.field-meta.xml
<CustomField>
    <fullName>fboost__Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Distinguish cancellation requests</description>
    <label>Cancellation</label>
    <type>Checkbox</type>
</CustomField>