force-app/main/default/objects/fboost__B_AsyncJobEvent__e/fields/fboost__ExecutionStrategy__c.field-meta.xml
<CustomField>
    <fullName>fboost__ExecutionStrategy__c</fullName>
    <description>Determines the process execution strategy, available options : Direct, SObjectBatch</description>
    <label>Execution Strategy</label>
    <length>32</length>
    <type>Text</type>
</CustomField>