force-app/main/default/objects/fboost__B_AsyncJobEvent__e/fields/fboost__ExecutionTime__c.field-meta.xml
<CustomField>
    <fullName>fboost__ExecutionTime__c</fullName>
    <description>Execution Time</description>
    <label>Execution Time</label>
    <type>DateTime</type>
</CustomField>