force-app/main/default/objects/fboost__B_AsyncJobEvent__e/fields/fboost__Payload__c.field-meta.xml
<CustomField>
    <fullName>fboost__Payload__c</fullName>
    <description>Describes platform event additional data</description>
    <label>Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>