force-app/main/default/objects/fboost__B_AsyncJobEvent__e/fields/fboost__ProcessName__c.field-meta.xml
<CustomField>
    <fullName>fboost__ProcessName__c</fullName>
    <description>Name of process - batch which should be executed on event creation</description>
    <label>Process Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>