force-app/main/default/objects/fboost__B_AsyncJobEvent__e/fields/fboost__RecordKeys__c.field-meta.xml
<CustomField>
    <fullName>fboost__RecordKeys__c</fullName>
    <label>Record Keys</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>