force-app/main/default/objects/fboost__B_AsyncJobEvent__e/fields/fboost__StoreInQueue__c.field-meta.xml
<CustomField>
    <fullName>fboost__StoreInQueue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store In Queue</label>
    <type>Checkbox</type>
</CustomField>