force-app/main/default/objects/fboost__B_AsyncJobEvent__e/fields/fboost__Type__c.field-meta.xml
<CustomField>
    <fullName>fboost__Type__c</fullName>
    <defaultValue>&quot;Immediate&quot;</defaultValue>
    <description>Technical field to improve Query speed. Determines the type of the request. Available values : Immediate and Time Dependent</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>